# SCrystalStoneRPG

source/: CMakeLists.txt  SCSRPG_Constants.cpp  SCSRPG_Constants.h  SCSRPG_Entity.cpp  SCSRPG_Entity.h  SCSRPG_Game.cpp  SCSRPG_Game.h  SCSRPG_Player.cpp  SCSRPG_Player.h  SCSRPG_Scenes.cpp  SCSRPG_Scenes.h  SCSRPG_Terminal.cpp  SCSRPG_Terminal.h  SCSRPG_Texts.cpp  SCSRPG_Texts.h  console.cpp  console.h  constants.h  game.h  main.cpp  scenes.cpp  scenes.h  textual_content.h
utilities/: templates.txt
